<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">自行车行车导航</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_title">菜单</string>
     <string name="base_function">基本功能</string>
     <string name="record_title">行车记录</string>
    <string name="message_title">短信发送</string>
    <string name="navibar_title">123</string>
    <string name="navi_car">驾车</string>
    <string name="navi_foot">步行</string>
    <string name="start_hud_navi">HUD显示</string>
    <string name="complex_function">导航模块</string>
    
    
    <string name="navi_empty_car">"驾   车"</string>
    <string name="navi_empty_foot">"步   行"</string>
    <string name="navi_start">"起    点"</string>
    <string name="navi_middle">途经点</string>
    <string name="navi_end">"终    点"</string>
    <string name="navi_strategy">"策    略"</string>
    <string name="navi_route">路径规划</string>
    <string name="navi_navi">模拟导航</string>
       <string name="start_navi_navi">实时导航</string>
    <string name="navi_strategy_speed">速度最快</string>
    <string name="navi_strategy_cost">避免收费</string>
    <string name="navi_strategy_distance">距离最短</string>
    <string name="navi_strategy_nohighway">不走高速快速路</string>
    <string name="navi_strategy_timenojam">时间最短且躲避拥堵</string>
    <string name="navi_strategy_costnojam">避免收费且躲避拥堵</string>
    
    <string name="theme_blue">经典蓝</string>
    <string name="theme_pink">可爱粉</string>
    <string name="theme_white">简约白</string>
    
    <string name="setting">设置</string>
    <string name="day">白天</string>
    <string name="night">夜间</string>
    <string name="yes">"  是  "</string>
    <string name="no">"  否  "</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="daynightmode">"昼夜模式    "</string>                                                                                  
    <string name="deviationrecalculation">"偏航重算    "</string>
    <string name="jamrecalculation">"拥堵重算    "</string>
    <string name="trafficbroadcast">"交通播报    "</string>
    <string name="camerabroadcast">摄像头播报</string>
    <string name="screenon">"屏幕常亮    "</string>
    <string name="routeshow">线路展示</string>
    <string name="tapmap">点击地图设置</string>
    <string name="starttapmap">我的位置（可点击地图设置）</string>
    <string name="walkdescription">步行状态不可用</string>
    <string name="routeinfo">全程   --公里/--分钟    收费 --元</string>
     <string name="routeinfo_1">全程 </string>
      <string name="routeinfo_2">公里/</string>
       <string name="routeinfo_3">"分钟    收费"</string>
       <string name="routeinfo_4">元</string>
       <string name="routeinfo_default">--</string>
    <string name="app_id">输入您讯飞的appid</string>
    <string name="mypoistion">我的位置</string>
    <string name="mappoistion">地图点选</string>
    <string name="positioninfo">位置信息</string>

    <string-array name="preference_values_tts_role">z
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>vixy</item>
        <item>vixq</item>
        <item>vixf</item>
        <item>vixm</item>
        <item>vixl</item>
        <item>vixr</item>
        <item>vixyun</item>
        <item>vixk</item>
        <item>vixqa</item>
        <item>vixying</item>
        <item>vixx</item>
        <item>vinn</item>
        <item>vils</item>
    </string-array>

    <string name="preference_default_tts_role">xiaoyan</string>
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="preference_title_tts_speed">语速</string>
    <string name="preference_default_tts_speed">50</string>
    <string name="preference_dialog_title_tts_speed">选择语速</string>
    <string name="preference_key_tts_volume">tts_volume</string>
    <string name="preference_title_tts_volume">音量</string>
    <string name="preference_default_tts_volume">50</string>
    <string name="preference_dialog_title_tts_volume">选择音量</string>
    <string name="preference_key_tts_pitch">tts_pitch</string>
    <string name="preference_title_tts_pitch">语调</string>
    <string name="preference_default_tts_pitch">50</string>

</resources>